2020-02-08  John Darrington <john@darrington.wattle.id.au>

	* src/pk-editor.c (pk_cmd_editor): Fix memory leak.

2020-02-07  Jose E. Marchesi  <jemarch@gnu.org>

	* src/pvm.jitter: Add comments to instruction definitions.

2020-02-07  Jose E. Marchesi  <jemarch@gnu.org>

	* testsuite/poke.pkl/ass-2.pk: New file.
	* testsuite/poke.pkl/ass-8.pk: Likewise.
	* testsuite/poke.pkl/ass-7.pk: Likewise.
	* testsuite/poke.pkl/ass-6.pk: Likewise.
	* testsuite/poke.pkl/ass-5.pk: Likewise.
	* testsuite/poke.pkl/ass-4.pk: Likewise.
	* testsuite/poke.pkl/ass-3.pk: Likewise.

2020-02-07  Jose E. Marchesi  <jemarch@gnu.org>

	* TODO (fold bconc expressions): Task done.
	(fold array subscripts): Likewise.
	(fold .<< and .>> expressions): Likewise.

2020-02-06  Jose E. Marchesi  <jemarch@gnu.org>

	* src/pkl-ast.h (enum pkl_ast_code): Define PKL_AST_LAST_EXP.

2020-02-06  Jose E. Marchesi  <jemarch@gnu.org>

	* src/pkl-ast.c (pkl_ast_lvalue_p): Fix logic to avoid assignments
	to values.
	* testsuite/poke.pkl/ass-diag-6.pk: New test.
	* testsuite/poke.pkl/ass-1.pk: Likewise
	* testsuite/poke.pkl/ass-diag-7.pk: Likewise..
	* testsuite/poke.pkl/ass-diag-8.pk: Likewise.

2020-02-06  Jose E. Marchesi  <jemarch@gnu.org>

	* src/pkl-fold.c (pkl_fold_ps_cond_exp): New handler.

2020-02-06  Jose E. Marchesi  <jemarch@gnu.org>

	* doc/poke.texi (Conditional Expression): New section.

2020-02-06  Jose E. Marchesi  <jemarch@gnu.org>

	* src/pkl-gen.c (pkl_gen_pr_cond_exp): New handler.
	(pkl_phase_gen): Install handler.
	* testsuite/poke.pkl/cond-exp-1.pk: New file.
	* testsuite/poke.pkl/cond-exp-2.pk: Likewise.

2020-02-05  Jose E. Marchesi  <jemarch@gnu.org>

	* src/pkl-typify.c (pkl_typify1_ps_cond_exp): New handler.
	(pkl_phase_typify1): Install it.
	* src/pkl-tab.y (expression): New rule for the ternary conditional
	operator.
	* src/pkl-promo.c (pkl_promo_ps_cond_exp): New handler.
	(pkl_phase_promo): Install handler.
	* testsuite/poke.pkl/cond-exp-diag-1.pk: New file.