@@ -1,0 +1,4 @@
+/* { dg-do run } */
+
+/* { dg-command {  [.[1+1]=10] } } */
+/* { dg-output "\\\[10,10,10\\\]" } */
